--- a/redhat/Dockerfile
+++ b/redhat/Dockerfile
@@ -3,6 +3,6 @@
 FROM registry.access.redhat.com/ubi7:latest
 
 # Cambiando parametros del Dockerfile para generar neva salida en OCP pod.
-#CMZ
+###CMZ
 #CMD ["/bin/bash", "-c", "sleep infinity"]
  CMD ["/bin/bash", "-c", "--", "while true; do sleep 30; done;"]
